Fix leaking window title on mobile

--- a/style.css
+++ b/style.css
@@ -1176,7 +1176,7 @@ div.empty {
     margin-bottom: 60px !important;
   }
 
-  .home .window.browser .title {
+  .home .window .title {
     width: 80%;
   }
 
